# custom_cc_library

./: BUILD  WORKSPACE  main.cc
bazel/: BUILD.bazel  attribute_manipulations.bzl  debug.bzl  tab_cc_helpers_internal.bzl  tab_cc_library_internal.bzl
libone/: BUILD  libone.cc  libone_private_header.h  libone_public_header.h
libtwo/: BUILD  libtwo.cc  libtwo_private_header.h  libtwo_public_header.h
